tests/valid/Function_Definitions/Function_Definition_and_Call.vyp
int add(int x, int y) {
    return x + y;
}

void main(void) {
    int result;
    result = add(3, 7);
    print("Result: ", result, "\n");
}
