tests/invalid/Function_Definitions/Missing_Return_Statement.vyp
int add(int x, int y) {
    int result;
    result = x + y;
}

void main(void) {
    int sum;
    sum = add(2, 3);
    print(sum, "\n");
}
